# tin_can_telephone

./: .gitignore  Cargo.toml  Readme.md  client.py  rusty-tags.vi  test.py
etc/: example.rs
examples/: README.md  client.rs  db.rs  server.rs
src/: client.rs  data.rs  db.rs  example.rs  lib.rs  main.rs  serializer.rs  server.rs  stanza.rs  tcp_example.rs  xmpp.rs
tests/: clients.rs  stanza.rs
