[package]
name = "tin_can_telephone"
version = "0.1.0"
authors = ["kibbles <colindjk@gmail.com>"]

[dependencies]
serde = "0.8.*"
serde_xml = "0.8.*"
serde_derive = "0.8.*"

futures = { git = "https://github.com/alexcrichton/futures-rs" }
tokio-core = { git = "https://github.com/tokio-rs/tokio-core" }

env_logger = "0.3"
