[package]
name = "tin_can_telephone"
version = "0.1.0"
repository = "https://github.com/colindjk/tin_can_telephone"
homepage = "https://github.com/colindjk/tin_can_telephone"
authors = ["kibbles <colindjk@gmail.com>"]

description = """
A messaging service made by a few bored college students for a school project,
because coding the whole thing in something like Java is just too damn easy.
{ git = "https://github.com/tokio-rs/tokio-core" }
"""

[dependencies]
serde = "0.8.*"
serde_json = "0.8.*"
serde_derive = "0.8.*"

futures = "0.1.4"
tokio-core = "0.1.1"

mysql_async = "0.2.*"

env_logger = "0.3"

mio = "0.6"
